--- a/PreEntrega3 - JoseRivera/index.html
+++ b/PreEntrega3 - JoseRivera/index.html
@@ -12,6 +12,12 @@
     <h1 id="nombreCliente"></h1>
     <button id="cambioNombre">Ingresa nombre</button>
 
+    <h1>Promociones</h1>
+    <ul id="listaPromos"></ul>
+    <button id="agregaProducto">Agrega Producto</button>
+    <button id="calculaPrecio">Calcula Precio</button>
+    <p id="totalPago"></p>
+
     <script src="script.js"></script>
 </body>
 </html>
