--- a/PreEntrega3 - JoseRivera/index.html
+++ b/PreEntrega3 - JoseRivera/index.html
@@ -7,16 +7,28 @@
 </head>
 <body>
     
-    <h1 id="saludo"></h1>
+    <h1><strong>Bienvenido a Pizza's Cata</strong></h1>
 
-    <h1 id="nombreCliente"></h1>
+    <h2 id="saludo"></h2>
+
+    <h2 id="nombreCliente"></h2>
     <button id="cambioNombre">Ingresa nombre</button>
 
-    <h1>Promociones</h1>
+    <h2>Promociones</h2>
     <ul id="listaPromos"></ul>
     <button id="agregaProducto">Agrega Producto</button>
     <button id="calculaPrecio">Calcula Precio</button>
     <p id="totalPago"></p>
+
+    <button id="verPago">Ir a Pago</button>
+
+    <ul id="totalFinal"></ul>
+
+    <div id="despedida"></div>
+
+    <button id="limpiar">Nueva Boleta</button>
+
+
 
     <script src="script.js"></script>
 </body>
