PreEntrega 3 - modificacion DOM

--- a/PreEntrega3 - JoseRivera/index.html
+++ b/PreEntrega3 - JoseRivera/index.html
@@ -16,6 +16,9 @@
 
     <h2>Promociones</h2>
     <ul id="listaPromos"></ul>
+
+    <ul id="listaPromociones"></ul>
+
     <button id="agregaProducto">Agrega Producto</button>
     <button id="calculaPrecio">Calcula Precio</button>
     <p id="totalPago"></p>
